public class AggiuntaProdottoException extends Exception
{
    public AggiuntaProdottoException(String messaggio)
    {
        super(messaggio);
    }
    
}
